# arrowlens

./: .gitignore  AGENT.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
.github/workflows/: release.yml
scripts/: bump-version.mjs
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: error.rs  lib.rs  main.rs
src-tauri/src/api/: database_api.rs  dataset_api.rs  export_api.rs  mod.rs  query_api.rs  stats_api.rs
src-tauri/src/cache/: app_store.rs  metadata_cache.rs  mod.rs
src-tauri/src/engine/: batch_utils.rs  database_executor.rs  database_registry.rs  dataset_executor.rs  dataset_registry.rs  mod.rs  query_engine.rs  query_executor.rs  query_planner.rs  schema_manager.rs  statistics_engine.rs
src-tauri/src/loaders/: arrow_loader.rs  csv_loader.rs  json_loader.rs  mod.rs  parquet_loader.rs
src-tauri/src/services/: dataset_service.rs  mod.rs
src-tauri/src/state/: mod.rs
src-tauri/src/streaming/: cell_serializer.rs  database_converter.rs  mod.rs  record_batch_stream.rs  result_serializer.rs
src/components/: ChartBuilder.tsx  CommandPalette.tsx  DebugPanel.tsx  ErrorBoundary.tsx  ExportModal.tsx  LoadingSpinner.tsx  SavedQueriesPanel.tsx  SchemaTree.tsx  StatusBar.tsx  VirtualTable.tsx
src/context/: AppProviders.tsx  QueryTabsContext.tsx
src/hooks/: useKeyboardShortcuts.ts  usePersistentState.ts
src/models/: database.ts  dataset.ts  query.ts  queryTab.ts  statistics.ts
src/services/: databaseService.ts  (+6 more)
(+62 files in other folders)
