[package]
name = "arrowlens"
version = "0.1.0"
edition = "2021"

[lib]
name = "arrowlens_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri          = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs     = "2"
tauri-plugin-shell  = "2"

serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
thiserror   = "1"
anyhow      = "1"
log         = "0.4"
env_logger  = "0.11"

tokio       = { version = "1", features = ["full"] }
futures     = "0.3"
async-trait = "0.1"

datafusion      = { version = "44", features = ["parquet"] }
arrow           = { version = "53", features = ["prettyprint"] }
arrow-array     = "53"
arrow-schema    = "53"
arrow-ipc       = "53"
arrow-json      = "53"
arrow-cast      = "53"

uuid      = { version = "1", features = ["v4"] }
chrono    = { version = "0.4", features = ["serde"] }
once_cell = "1"
parking_lot = "0.12"
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio-rustls", "any", "sqlite", "mysql", "postgres"] }

[profile.release]
opt-level    = 3
lto          = true
codegen-units = 1
panic        = "abort"
strip        = true
